# AeroSCOPE_dataset

./: .gitignore  README.md  pyproject.toml
TrafficEstimator/: pyproject.toml
TrafficEstimator/01_wikipedia_parser/: 01-airport_parsing.ipynb  02-routes_parsing.ipynb  03-routes_processing.ipynb
TrafficEstimator/02_airport_features/: 00_kontur_loading.ipynb
TrafficEstimator/03_routes_schedule/: 01_routes_preparation.ipynb
TrafficEstimator/04_app/: AeroSCOPE.ipynb  continental_level_plots.py  country_level_plots.py  flight_level_plots.py  front-alt-layout.ipynb  front-dev.ipynb  preprocess.py
TrafficEstimator/Utilities/: flights.py  osky_data_extraction.ipynb  us_bts.py
aeroscope/: __init__.py  pyproject.toml
aeroscope/00_aircraft_registration/: distribution_plane_owner.py  distribution_tbm_kodiak_owner.py  parse_wikipedia_registration_prefix.py
aeroscope/01_to_03_bis_opensky_only/: osky_data_extraction_standalone-2019.ipynb  osky_data_extraction_standalone-2022.ipynb
aeroscope/01_wikipedia_parser/: 01-airport_parsing.ipynb  02-routes_parsing.ipynb  03-routes_processing.ipynb
aeroscope/02_airport_features/: 00_kontur_loading.ipynb
aeroscope/03_routes_schedule/: 00_oag_preprocessing.ipynb  01_routes_preparation.ipynb  02_routes_estimation.ipynb
aeroscope/04_app/: AeroSCOPE-DEV.ipynb  AeroSCOPE-OS.ipynb  AeroSCOPE-Recast.ipynb  AeroSCOPE.ipynb  aeromaps_front.py  continental_front.py  continental_level_plots.py  core.py  country_front.py  country_level_plots.py  detailled_front.py  flight_level_plots.py  passenger_front.py  preprocess.py  (+3 more)
(+63 files in other folders)
